<resources>
    <string name="app_name">Book Inventory</string>

    <string name="product_name">Product Name</string>
    <string name="product_currency">$</string>
    <string name="product_price">Price</string>
    <string name="product_quantity">Quantity</string>
    <string name="quantity_default">0</string>
    <string name="supplier_name">Supplier</string>
    <string name="supplier_phone_number">Supplier Phone Number</string>

    <string name="empty">Try adding a book name, price, quantity,\nsupplier name, and supplier phone number.</string>

    <string name="book_table_has">The book table has </string>
    <string name="books" > books.</string>

    <string name="save">Save</string>
    <string name="delete">Delete Item</string>
    <string name="delete_all">Delete Items</string>
    <string name="delete_inventory">Delete Entire Inventory</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>

    <string name="editor_activity_new_book">Add a book</string>
    <string name="editor_activity_existing_book">Edit book</string>

    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_insert_product_failed">Error with saving product</string>

    <string name="editor_update_product_successful">Product updated</string>
    <string name="editor_update_product_failed">Error with updating product</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>\
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <string name="editor_delete_book_successful">Product deleted</string>
    <string name="editor_delete_book_failed">Error with deleting product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete_all_dialog_msg">Delete entire inventory?</string>
    <string name="delete_books">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="decrease_quantity">-</string>
    <string name="increase_quantity">+</string>
    <string name="call_supplier">Call</string>
    <string name="enter_quantity">Please enter quantity first.</string>
    <string name="valid_product_name">Please enter a valid product name.</string>
    <string name="valid_price">Please enter a valid price.</string>
    <string name="valid_quantity">Please enter a valid quantity.</string>
    <string name="valid_supplier_name">Please enter a valid supplier name.</string>
    <string name="valid_supplier_number">Please enter a valid supplier number.</string>
    <string name="finish_entering_data">Please finish entering data.</string>

</resources>
